--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                 <p>Worked in a team to build a web application which allows users with little or no knowledge of database to generate SQL query based on the requirement. The application spans over database to generate query for various DDL and DML operations.</p>
               </div>
 
-              <div class="three columns header-col">
+              <!-- <div class="three columns header-col">
                 <h2><span><a href="https://google.com">Portfolio</a></span></h2>
                 <p>Created this portfolio as part of Edwisor Assignment</p>
-              </div>
+              </div> -->
          </div>
    </section>
 
