--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
 
       <h1><span>Work History<span></h1>
           <div class="row">
-              <div class="three columns header-col">
+              <div class="four columns header-col">
                 <h2><span>Online Book Library</span></h2>
                 <p>Created an Online Book Library using NodeJs and MongoDb that allows users to login and register in the portal. Users can able to login and issue and manage books on their name.</p>
               </div>
             
-              <div class="three columns header-col">
+              <div class="four columns header-col">
                 <h2><span>CSI Application</span></h2>
                 <p>Created an application to track development hours for projects. Front End was created using HTML, CSS and Bootstrap. Used Angular, JavaScript and jquery for better functionality.</p>
               </div>
 
-              <div class="three columns header-col">
+              <div class="four columns header-col">
                 <h2><span>UI Based Query Generator</span></h2>
                 <p>Worked in a team to build a web application which allows users with little or no knowledge of database to generate SQL query based on the requirement. The application spans over database to generate query for various DDL and DML operations.</p>
               </div>
