--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="twelve columns">
             <h2 class="text-center">About Me</h2>
                 <p>
-                    Hello, my name is Ankur and I have 2.5 years of hands-on work experience in UI/UX design and front-end development for rich Internet applications.
+                    Hello, my name is Ankur and I have 2.9 years of hands-on work experience in UI/UX design and front-end development for rich Internet applications.
                     I am currently working as a Web Developer in Infosys Technologies. I have worked on Front End Technology which includes HTML5, CSS3, JAVASCRIPT, ANGULAR and I am actively seeking for new opportunity.
                     I have special interests in Android Application Development and Open Source and Actively seek for new Technology in IT sector.
                 </p>
@@ -54,7 +54,7 @@
       <div class="row">
           <h2 class="text-center">Resume</h2>
               <p class="text-center">
-                    <a target="_blank"  href="https://drive.google.com/open?id=1ImJiAOV8a5xz1mp5KPre8V1ysfE863s6"><i class="fa fa-download fa-2x" style="color:#fff" aria-hidden="true"></i></a><br>Have a Look at my CV.
+                    <a target="_blank"  href="https://drive.google.com/open?id=1RGFgFxCBnWNn-i1AiiFbGXq9j9bTlxSi"><i class="fa fa-download fa-2x" style="color:#fff" aria-hidden="true"></i></a><br>Have a Look at my CV.
               </p>
       </div>
   </section>
@@ -88,7 +88,7 @@
                   <h3>Senior Systems Engineer at Infosys Limited</h3>
                   <p class="info">Web Developer <span>&bull;</span> <em class="date">September 2015 - Present</em></p>
                   <p>
-					           Developed Web applications by using HTML5, CSS3, and JavaScript, taking advantage of jQuery and  AngularJS. Good Experience in Developing Single Page applications and working with components, directives of Angular 2/4 framework.
+					          Developed Web applications by using HTML5, CSS3, and JavaScript, taking advantage of jQuery and  AngularJS. Good Experience in Developing Single Page applications and working with components, directives of Angular 2/4 framework.
                   </p>
                </div>
             </div>
@@ -103,13 +103,13 @@
                   <h1 style="text-align: center"><span>Skills</span></h1><br>
 				   
                   <img src="images/HTML5.png" alt="HTML5" title="HTML5">
-                  <img src="images/css3.svg" alt="CSS3" title="CSS3" />
-                  <img src="images/js5.png" alt="JavaScript" title="JavaScript" />
+                  <img src="images/CSS3.svg" alt="CSS3" title="CSS3" />
+                  <img src="images/JS5.png" alt="JavaScript" title="JavaScript" />
                   <img src="images/angular.png" alt="Angular" title="Angular">
                   <img src="images/bootstrap.png" alt="Bootstrap" title="Bootstrap" />
                   <img src="images/jq.jpg" style="width:80px" alt="jQuery"  title="jQuery" />
                   <img src="images/ajax.png" alt="AJAX" title="AJAX" />
-                  <img src="images/json.png" alt="JSON" title="JSON" />
+                  <img src="images/JSON.png" alt="JSON" title="JSON" />
                   <img src="images/mongodb.jpg" style="width:100px" alt="MongoDB" title="MongoDB">
                   <img src="images/oracle.png" style="padding:5px" alt="Oracle" title="Oracle" />
                   <img src="images/node.png" alt="Node.js" title="Node.js" />
@@ -128,27 +128,53 @@
    <section id="portfolio">
 
       <h1><span>Work History<span></h1>
+	  <div class="container">
           <div class="row">
-              <div class="four columns header-col">
-                <h2><span>Online Book Library</span></h2>
-                <p>Created an Online Book Library using NodeJs and MongoDb that allows users to login and register in the portal. Users can able to login and issue and manage books on their name.</p>
+              <div class="box columns header-col">
+					<div class="imgBox">
+					<img src="images/world.png">
+					</div>
+					<div class="content">
+					<a href="https://ankursgt.github.io/World-Countries/">
+				<h2>World Countries</h2>
+				<p>Project in Angular developed from scratch that contains all the details of the countries in the world. Developed from an API.</p>
+			  </div>
+               <!--  <h2><span>Online Book Library</span></h2>
+                <p>Created an Online Book Library using NodeJs and MongoDb that allows users to login and register in the portal. Users can able to login and issue and manage books on their name.</p> -->
               </div>
             
-              <div class="four columns header-col">
-                <h2><span>CSI Application</span></h2>
-                <p>Created an application to track development hours for projects. Front End was created using HTML, CSS and Bootstrap. Used Angular, JavaScript and jquery for better functionality.</p>
+              <div class="box columns header-col">
+					<div class="imgBox">
+					<img src="images/chatapp.png">
+					</div>
+					<div class="content">
+					<a href="https://ankursgt.github.io/Chat-App/">
+				<h2>Chat Application</h2>
+				<p>This project involves a chat application built using Socket.IO. Users can sign up and login to chat with Online users.</p>
+			  </div>
+                <!--<h2><span>CSI Application</span></h2>
+                <p>Created an application to track development hours for projects. Front End was created using HTML, CSS and Bootstrap. Used Angular, JavaScript and jquery for better functionality.</p>-->
               </div>
 
-              <div class="four columns header-col">
-                <h2><span>UI Based Query Generator</span></h2>
-                <p>Worked in a team to build a web application which allows users with little or no knowledge of database to generate SQL query based on the requirement. The application spans over database to generate query for various DDL and DML operations.</p>
+              <div class="box columns header-col">
+                <div class="imgBox">
+					<img src="images/whatsapp.png">
+					</div>
+					<div class="content">
+					<a href="https://ankursgt.github.io/Whatsapp-Clone/">
+				<h2>Whatsapp clone</h2>
+				<p>Created an exact clone for Whatsapp web. All pages are fully responsive. Do have a look.</p>
+			  </div>
+				<!-- <h2><span>UI Based Query Generator</span></h2>
+                <p>Worked in a team to build a web application which allows users with little or no knowledge of database to generate SQL query based on the requirement. The application spans over database to generate query for various DDL and DML operations.</p>-->
               </div>
 
               <!-- <div class="three columns header-col">
                 <h2><span><a href="https://google.com">Portfolio</a></span></h2>
                 <p>Created this portfolio as part of Edwisor Assignment</p>
               </div> -->
-         </div>
+			</div>
+		</div>
    </section>
 
   <footer>
