--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<img src="images/world.png">
 					</div>
 					<div class="content">
-					<a href="https://ankursgt.github.io/World-Countries/">
+					<a href="https://ankursgt.github.io/Planet-Countries/">
 				<h2>World Countries</h2>
 				<p>Project in Angular developed from scratch that contains all the details of the countries in the world. Developed from an API.</p>
 			  </div>
